# blockchain

./: .gitignore  README.md
.github/: copilot-instructions.md
ai/models/: reward_model.py  test_reward_model.py
backend/api/: README.md  claim.rs  routes.md
backend/node/: .env.example  Cargo.toml  README.md  ai_integration.rs  db.rs  db_actions.rs  wasm_contract.rs
backend/node/migrations/: 001_init.sql
backend/node/src/: claim.rs  db.rs  db_actions.rs  main.rs  wasm_contract.rs
backend/node/tests/: mining.rs
client/: package.json
client/components/: MiningCounter.js
client/hooks/: useActionMining.js  useWallet.js
client/pages/: _app.js  dashboard.js  index.js
client/styles/: global.css
contracts/tests/: README.md
contracts/wasm/: Cargo.toml  README.md  build.sh
contracts/wasm/src/: lib.rs
contracts/wasm/tests/: mint.rs
docs/: MVP_DEPLOY.md
