[package]
name = "unifiednun_node"
version = "0.1.0"
edition = "2021"

description = "UnifiedNUN browser-based blockchain node and mining logic."

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
wasmtime = "14.0"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = "2.8"
# Add more as needed for blockchain logic
anyhow = "1.0"
